[gd_scene load_steps=13 format=2]

[ext_resource path="res://scene/tower/towerrrrr.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/tower/towertest1.gd" type="Script" id=2]
[ext_resource path="res://scene/Bullet/towertestBullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://resource/tower/Tower-Botton(left2).png" type="Texture" id=4]
[ext_resource path="res://resource/tower/Tower-Botton(left3).png" type="Texture" id=5]
[ext_resource path="res://resource/tower/Tower-Botton(left4).png" type="Texture" id=6]
[ext_resource path="res://resource/tower/Tower-Botton(right1).png" type="Texture" id=7]
[ext_resource path="res://resource/tower/Tower-Botton(right2).png" type="Texture" id=8]
[ext_resource path="res://resource/tower/Tower-Botton(right3).png" type="Texture" id=9]
[ext_resource path="res://resource/tower/Tower-Botton(right4).png" type="Texture" id=10]
[ext_resource path="res://scene/tower/DetectRadius.gd" type="Script" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="tower" instance=ExtResource( 1 )]
position = Vector2( 275.761, 227.998 )
scale = Vector2( 0.212579, 0.161123 )
script = ExtResource( 2 )
Bullet = ExtResource( 3 )
rotation_speed = 80.0
gun_cooldown = 0.2
turret_speed = 60.0
detect_radius = 500

[node name="base" parent="." index="0"]
position = Vector2( -23.3112, 36.9074 )
scale = Vector2( 0.95447, 1.09611 )
frames = SubResource( 1 )
frame = 6

[node name="CollisionShape2D" parent="." index="1"]
scale = Vector2( 1.82635, -1.04873 )

[node name="top" parent="." index="2"]
rotation = 0.261799

[node name="Muzzle" parent="top" index="0"]
position = Vector2( -11.9385, -84.0135 )

[node name="DetectRadius" type="Area2D" parent="." index="4"]
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius" index="0"]

[node name="Control" type="Control" parent="." index="5"]
margin_left = -23.0
margin_top = -28.0
margin_right = 24.0
margin_bottom = 40.0

[node name="MenuButton" type="MenuButton" parent="Control" index="0"]
margin_right = 140.0
margin_bottom = 134.0
rect_scale = Vector2( 0.323255, 0.323255 )
switch_on_hover = true

[node name="mobtimer" type="Timer" parent="." index="6"]
wait_time = 0.1

[connection signal="shoot" from="." to="." method="_on_tower_shoot"]
[connection signal="timeout" from="firerate" to="." method="_on_firerate_timeout"]
[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_entered" from="DetectRadius" to="DetectRadius" method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
[connection signal="timeout" from="mobtimer" to="." method="_on_mobtimer_timeout"]
